add masthead height

--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -25,6 +25,7 @@
 
       .masthead {
       background: url("/img/grey/grey.png") repeat scroll 0% 0% transparent;
+      min-height: 50px;
       }
       /* Main marketing message and sign up button */
       .jumbotron {
@@ -368,7 +369,7 @@
       <p class="on-edit text-success">
         <em>Select fields in decision tree and 'tap' or 'click' to edit them</em>
       </p>
-      
+
       <div id={{tree.id}} class="tree" data-id=-1>
         <span class="label label-info pull-right"></span>
         <h2 class="node-head">{{tree.head}}</h2>
