--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -192,7 +192,7 @@
           act-cancel" disabled="disabled"><i class="icon-remove"></i> Revert Changes</button>
         </div>
       </div>
-      <p class="on-edit text-success">
+      <p class="on-edit text-info">
         <em>Select fields in decision tree and 'tap' or 'click' to edit them</em>
       </p>
 
