Enable Saving/Editing

--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -197,7 +197,8 @@
       </p>
 
       {{#with nodes}}
-      <div id={{../id}} class="tree" data-id={{tree.id}}>
+      <!-- <div id={{../id}} class="tree" data-id={{tree.id}}> -->
+      <div class="tree" data-id={{tree.id}}>
         <span class="label label-info pull-right"></span>
         <h2 class="node-head">{{tree.head}}</h2>
         <p class="node-desc">{{tree.desc}}</p>
