--- a/assets/html/first-banner.html
+++ b/assets/html/first-banner.html
@@ -19,14 +19,13 @@
         margin: 0 auto;
         max-width: 768px;
       }
-      .container-narrow > hr {
-        margin: 30px 0;
-      }
 
       .masthead {
-      background: url("/img/grey/grey.png") repeat scroll 0% 0% transparent;
-      min-height: 50px;
+        background: url("/img/grey/grey.png") repeat scroll 0% 0% transparent;
+        min-height: 50px;
+        padding: 0 10px;
       }
+
       /* Main marketing message and sign up button */
       .jumbotron {
         margin: 60px 0;
@@ -81,7 +80,6 @@
 
       /* Tree Formatting */
       .tree-elem {
-        -moz-box-shadow: 3px 3px 3px #1c1c1c;
         -webkit-box-shadow: 3px 3px 3px #1c1c1c;
         box-shadow: 3px 3px 3px #1c1c1c;
         border-radius:3px;
@@ -134,8 +132,6 @@
         <h3 class="text-center">Inorg Bisect <small class="muted">(beta)</small></h3>
       </div>
 
-      <hr>
-
       <div class="jumbotron">
         <h1>Super Bisection!</h1>
         <p>decisions diagrams to help your users identify the source of
@@ -143,9 +139,7 @@
         <button type="button" class="btn btn-large btn-success">Create one Now!</button>
       </div>
 
-      <hr>
-      <div id="t-tmpl-r3-test">
-      </div>
+      <div id="t-tmpl-r3-test"></div>
 
       <!-- View in three separate rows -->
       <!--
