--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -122,15 +122,39 @@
 
     <div class="container-narrow">
 
+      <div class="navbar">
+        <div class="navbar-inner">
+          <a class="brand" href="#">Inorg Bisect <small class="muted">(beta)</small></a>
+          <ul class="nav pull-right">
+            {% if user is none %}
+            <li><a href="{{user_url|e}}">Sign In</a></li>
+            {% else %}
+            <li><a class="disabled">{{user}}</a></li>
+            <li><a href="{{user_url|e}}">Sign Out</a></li>
+            {% endif %}
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+      </div>
+
+      {#
       <div class="masthead">
         <div class="btn-toolbar pull-right">
-          <a class="btn" href="#">Contact</a>
-        </div>
-        <div class="btn-toolbar pull-left">
           <a class="btn" href="#">About</a>
         </div>
+        <div class="btn-toolbar pull-left">
+          {% if user is none %}
+          <a class="btn" href="{{user_url}}">Sign In</a>
+          {% else %}
+          <a class="btn" href="{{user_url}}">Sign Out</a>
+          {% endif %}
+        </div>
         <h3 class="text-center">Inorg Bisect <small class="muted">(beta)</small></h3>
+        {% if user  %}
+        <div><span class="text-info">{{user}}</span></div>
+        {% endif %}
       </div>
+      #}
 
       <div class="jumbotron">
         <h1>Super Bisection!</h1>
