--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -129,7 +129,7 @@
             {% if user is none %}
             <li><a href="{{user_url|e}}">Sign In</a></li>
             {% else %}
-            <li><a class="disabled">{{user}}</a></li>
+            <li><a>{{user}}</a></li>
             <li><a href="{{user_url|e}}">Sign Out</a></li>
             {% endif %}
             <li><a href="#">About</a></li>
