--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -163,21 +163,24 @@
       </div>
 
       <footer id="about" class="footer">
-        <div class="media pull-left text-left" style="margin-left:10px">
-          <a class="pull-left" target="_blank" href="http://twitter.com/rksio">
-            <img class="media-object img-circle" src="/img/rksio.jpg"
-                 {#data-src="holder.js/64x64"#}
-                 alt="@rksio" style="width: 64px; height: 64px;">
-          </a>
-          <div class="media-body">
-            <h4 class="media-heading">Bisect</h4>
-            Bisect is is an experiment in knowledge sharing. <p>Rahul
-            Saxena <a target="_blank"
-            href="http://twitter.com/rksio">@rksio</a></p>
+        <div class="row-fluid">
+          <div class="span6">
+            <div class="media text-left" style="margin-left:10px">
+              <a class="pull-left" target="_blank" href="http://twitter.com/rksio">
+                <img class="media-object img-circle" src="/img/rksio.jpg"
+                     alt="@rksio" style="width: 64px; height: 64px;"></a>
+              <div class="media-body">
+                <h4 class="media-heading">Bisect</h4>
+                Bisect is a tool that allows you to share your expertise. Rahul
+                Saxena <a target="_blank" href="http://twitter.com/rksio">@rksio</a>
+              </div>
+            </div>
+          </div>
+          <div class="span6">
+            <p class="muted">&middot; Made organically in Boulder, CO &middot;</p>
+            <!-- <p>Inorg.org &copy; 2013</p> -->
           </div>
         </div>
-        <p class="muted">&middot; Made organically in Boulder, CO &middot;</p>
-        <p><small>Inorg.org &copy; 2013</small></p>
     </footer>
 
     </div> <!-- /container -->
