--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -11,7 +11,13 @@
     <link href="/bs/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
-        background:-moz-linear-gradient(0% 100% 278deg, #A5AAC0, #8E70BF 100%)
+        background-color: #F0FFFF; /* fallback color if gradients are not supported */
+        background-image: -webkit-linear-gradient(to right bottom, #F0FFFF, white); /* For Chrome and Safari */
+        background-image:    -moz-linear-gradient(to right bottom, #F0FFFF, white); /* For old Fx (3.6 to 15) */
+        background-image:     -ms-linear-gradient(to right bottom, #F0FFFF, white); /* For pre-releases of IE 10*/
+        background-image:      -o-linear-gradient(to right bottom, #F0FFFF, white); /* For old Opera (11.1 to 12.0) */
+        background-image:         linear-gradient(to right bottom, #F0FFFF, white); /* Standard syntax; must be last */
+        /*background-image:         linear-gradient(to right bottom, #D5DDFF, #CFBAF1);*/ /* Standard syntax; must be last */
       }
 
       /* Custom container */
@@ -57,15 +63,15 @@
       /* Inorg Specific CSS*/
 
       .tree-container {
-        border-top: 1px solid rgb(229, 229, 229);
-        border-bottom: 1px solid rgb(229, 229, 229);
+        border-top: 2px solid #DDD;
+        border-bottom: 2px solid #DDD;
         border-radius: 10px;
         padding: 10px 0;
       }
 
       .tree-list {
-        border-top: 1px solid rgb(229, 229, 229);
-        border-bottom: 1px solid rgb(229, 229, 229);
+        border-top: 2px solid #DDD;
+        border-bottom: 2px solid #DDD;
         border-radius: 10px;
         margin: 30px 0;
       }
