--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -159,27 +159,33 @@
                alt="morihei" style="width: 195px; height: 240px;">
         </a>
         <div class="media-body">
-          <blockquote>
-            <h2 class="media-heading">Bisect</h2>
-            <small>verb: divide into two parts.</small>
-          </blockquote>
+          <h2 class="media-heading">Bisect</h2>
+          <blockquote><small>verb: to debug using the process of elimination.</small></blockquote>
+          <p><strong>Bisect</strong > is a tool that allows the functional state of
+          programs to be tested against expected results. Tests
+          results are used as bisection points to eliminate and
+          narrow-down towards the root-cause of the underlying issue</p>
+          <p><strong>Module owners construct bisection trees</strong> by checking for
+          signs for failure at the system level and creating bisection
+          points that lead towards module level root-causes.</p>
+          <p><strong>All users</strong> leverage the bisection tree to help narrow-down
+          to the root-cause of the problem</p>
+          {#
+          <p>One of the fundamental problems in programming is the
+          transfer of program design across individuals. The other
+          problem is the ability to correct express these concepts to
+          other individuals. Bisect aims to address both of these
+          issues. </p>
           <p>A true understanding of the underpinnings of the nature
           of things comes from probing and testing for
           hypotheses.</p>
           <p>The nature of Programming consists of
           building functional abstractions. The correctness in
           functionality is verifiable when tested against requirement
-          of functionality. One of the fundamental problems in
-          programming is the transfer of program design across
-          individuals. The other problem is the ability to correct
-          express these concepts to other individuals. Bisect aims to
-          address both of these issues. </p>
+          of functionality.</p>
           <p>One of the hardest problems in transferring understanding
           is to guard against misconceptions.</p> 
-          <p>Bisect is a tool to allow the expression of programs into
-          testable concepts. It allows the expression of functionality
-          through a series of tests. It allows for the verifiable
-          expression of concepts</p>
+          #}
         </div>
       </div>
 
