Remove blockquote completely

--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -160,7 +160,7 @@
         </a>
         <div class="media-body">
           <h2 class="media-heading">Bisect</h2>
-          <blockquote><small>verb: to debug using the process of elimination.</small></blockquote>
+          <p><small class="muted">&mdash;verb: to debug using the process of elimination.</small></p>
           <p><strong>Bisect</strong > is a tool that allows the functional state of
           programs to be tested against expected results. Tests
           results are used as bisection points to eliminate and
