--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -213,8 +213,10 @@
                          alt="@rksio" style="width: 64px; height: 64px;"></a>
                   <div class="media-body">
                     <h4 class="media-heading">Bisect</h4>
-                    Bisect is a tool that allows you to share your expertise. Rahul
-                    Saxena <a target="_blank" href="http://twitter.com/rksio">@rksio</a>
+                    Bisect allows you to create and share your
+                    expertise using decision trees.
+                    <br>
+                    Rahul Saxena is here <a target="_blank" href="http://twitter.com/rksio">@rksio</a>
                   </div>
                 </div>
               </div>
