--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -28,11 +28,7 @@
 
       /* Main marketing message and sign up button */
       .jumbotron {
-        border-top: 2px solid #DDD;
-        border-bottom: 2px solid #DDD;
-        border-radius: 10px;
         margin: 60px 0;
-        padding: 20px 10px;
         text-align: center;
       }
       .jumbotron h1 {
@@ -68,7 +64,7 @@
         border-top: 2px solid #DDD;
         border-bottom: 2px solid #DDD;
         border-radius: 10px;
-        padding: 20px 0;
+        padding: 20px 10px;
       }
 
       .tree-list {
@@ -153,7 +149,7 @@
         </div>
       </div>
 
-      <div class="media jumbotron">
+      <div class="media jumbotron tree-container">
         <a class="pull-left" href="http://en.wikipedia.org/wiki/Aikido">
           <img class="media-object img-rounded" src="/img/morihei.jpg"
                alt="morihei" style="width: 195px; height: 240px;">
