--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -212,7 +212,7 @@
                     Bisect allows you to create and share your
                     expertise using decision trees.
                     <br>
-                    Rahul Saxena is here <a target="_blank" href="http://twitter.com/rksio">@rksio</a>
+                    Rahul Saxena is <a target="_blank" href="http://twitter.com/rksio">@rksio</a>
                   </div>
                 </div>
               </div>
