--- a/assets/tmpl/first-banner.html
+++ b/assets/tmpl/first-banner.html
@@ -12,12 +12,12 @@
     <style type="text/css">
       body {
         background-color: #F0FFFF; /* fallback color if gradients are not supported */
-        background-image: -webkit-linear-gradient(to right bottom, #F0FFFF, white); /* For Chrome and Safari */
-        background-image:    -moz-linear-gradient(to right bottom, #F0FFFF, white); /* For old Fx (3.6 to 15) */
-        background-image:     -ms-linear-gradient(to right bottom, #F0FFFF, white); /* For pre-releases of IE 10*/
-        background-image:      -o-linear-gradient(to right bottom, #F0FFFF, white); /* For old Opera (11.1 to 12.0) */
-        background-image:         linear-gradient(to right bottom, #F0FFFF, white); /* Standard syntax; must be last */
-        /*background-image:         linear-gradient(to right bottom, #D5DDFF, #CFBAF1);*/ /* Standard syntax; must be last */
+        background-image: -webkit-linear-gradient(top left, #F0FFFF, white); /* For Chrome and Safari */
+        background-image:    -moz-linear-gradient(top left, #F0FFFF, white); /* For old Fx (3.6 to 15) */
+        background-image:     -ms-linear-gradient(top left, #F0FFFF, white); /* For pre-releases of IE 10*/
+        background-image:      -o-linear-gradient(top left, #F0FFFF, white); /* For old Opera (11.1 to 12.0) */
+        background-image:         linear-gradient(top left, #F0FFFF, white); /* Standard syntax; must be last */
+        /*background-image:         linear-gradient(top left, #D5DDFF, #CFBAF1);*/ 
       }
 
       /* Custom container */
